--- a/css/index.css
+++ b/css/index.css
@@ -261,18 +261,32 @@ color: black;
     display: flex;
    
 }
-.source{
+.tags li a.source{
     background-color: green;
-    border-radius: 5px;
+    border-radius: 8px;
     width: 80px;
-   margin: 2px;
-    padding: 7px;
+    color: white;
+   margin: 5px;
+    padding: 8px 15px;
 }
-.yout{background-color:red;
-    border-radius: 5px;
-margin: 2px;
-       padding: 7px;
-    width: 80px;}
+.tags li a.yout {
+    background-color: #ff0000;
+    ;color: white;
+}
+
+    .tags li a {
+    display: inline-block;
+    padding: 8px 15px;
+    margin: 5px;
+  
+
+    color: #ff0000; 
+    border-radius: 8px; 
+
+}
+
+
+
 /* search */
 
 .search input:focus {
